# GameSaver

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: plan-game-dir-anchor.md  plan-multi-anchor-variables.md
src/: App.vue  api.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/redirector/: README.md  build.ps1
src-tauri/redirector/hook/: gamesaver_hook.cpp
src-tauri/redirector/injector/: injector.cpp
src-tauri/src/: app_state.rs  launcher.rs  learning.rs  lib.rs  lib_legacy.rs  library.rs  main.rs  migration.rs  path_utils.rs  precheck.rs  rules.rs  runtime.rs  runtime_commands.rs  settings.rs  shared.rs  storage.rs  task_support.rs  tasks.rs
src-tauri/src/learning/: analysis.rs  capture.rs  commands.rs  shared.rs  snapshot.rs
src-tauri/src/shared/: backup.rs  config.rs  launcher.rs  learning.rs  migration.rs  precheck.rs  rules.rs  runtime_info.rs  settings.rs  store.rs
src/components/: SettingsPage.vue
src/components/learning/: LearningPage.vue
src/components/rules/: RulesPage.vue
src/components/ui/: AppToast.vue  BlockingErrorDialog.vue  ConfirmDialog.vue
src/composables/: useConfirmDialog.ts  useLearningPage.ts  useLibraryPage.ts  useRulesPage.ts  useSettingsPage.ts  useToast.ts
