[package]
name = "gamesaver"
version = "0.1.8"
description = "GameSaver desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "gamesaver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
walkdir = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = true, features = ["deflate"] }
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
